# RiskIssueTracker

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/commands/: audit-layers.md  audit-severity.md  calc-severity.md  new-migration.md
.claude/rules/: backend.md  database.md  frontend.md
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  history.py  issues.py  mitigation_plans.py  projects.py  risks.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_log.py  history_entry.py  issue.py  mitigation_action.py  mitigation_plan.py  project.py  risk.py  user.py
backend/app/schemas/: audit_log.py  auth.py  common.py  history_entry.py  issue.py  project.py  risk.py
backend/app/services/: audit_service.py  auth_service.py  history_service.py  issue_service.py  mitigation_service.py  project_service.py  risk_service.py  severity_calculator.py
backend/migrations/: env.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/integration/api/: test_admin.py  test_audit_log.py  test_auth.py  test_history.py  test_issues.py  test_projects.py  test_risks.py
backend/tests/unit/services/: test_audit_service.py  test_auth_service.py  test_history_service.py  test_issue_service.py  test_project_service.py  test_risk_service.py  test_severity_calculator.py
database/: init.sql  seeds.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+36 files in other folders)
